# gated-rag

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: design.md
eval/golden/: .gitkeep  cuad_golden.jsonl
notebooks/: 00_verify_env.py  01_ingest.py  02_chunk_silver.py  03_embed_gold.py  04_index_and_eval.py  README.md
scripts/: deploy.ps1  deploy.sh
src/gated_rag/: __init__.py  config.py  pipeline.py
src/gated_rag/chunking/: __init__.py
src/gated_rag/embedding/: __init__.py  base.py  sentence_transformers_embedder.py
src/gated_rag/eval/: __init__.py  gate.py  golden.py  metrics.py
src/gated_rag/ingest/: __init__.py
src/gated_rag/retrieval/: __init__.py  base.py  faiss_retriever.py  vector_search_retriever.py
tests/: test_chunking.py  test_config.py  test_ingest_golden.py  test_metrics.py  test_retriever.py
